Minor style fixes for light/dark mode

--- a/styles.css
+++ b/styles.css
@@ -1,107 +1,106 @@
 :root {
-    --border-color: #5f6368;
+    --border-color: #dfe1e5;
     --button-search-font: #3c4043;
     --button-search-background: #f8f9fa;
     --footer-background: #f2f2f2;
     --footer-font: #70757a;
     --footer-font-dark: #999da2;
-  }
+}
 
-  *,
-  ::before,
-  ::after {
+*,
+::before,
+::after {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
+}
 
-  html {
+html {
     /* footer support */
     position: relative;
     min-height: 100%;
-  }
+}
 
-  body {
+body {
     font-family: arial, sans-serif;
     line-height: 1.6;
     /* footer support */
     margin-bottom: 100px;
-  }
+}
 
-  a {
+a {
     color: inherit;
     text-decoration: none;
-  }
+}
 
-  img {
+img {
     display: block;
     width: 100%;
-  }
+}
 
-  button,
-  input {
+button,
+input {
     border: none;
     outline: none;
-  }
+}
 
-  button {
+button {
     cursor: pointer;
-  }
+}
 
-  /* NAV */
+/* NAV */
 
-  .nav {
+.nav {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     gap: 10px;
     margin-top: 10px;
     font-size: 13px;
-  }
+}
 
-  .nav-link {
+.nav-link {
     opacity: 0.85;
-  }
+}
 
-  .nav-link:hover {
+.nav-link:hover {
     text-decoration: underline;
-  }
+}
 
-  .nav-link-round {
+.nav-link-round {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-  }
+}
 
-  .nav-link-round:hover {
+.nav-link-round:hover {
     background-color: #f0f0f0;
-  }
+}
 
-  .nav-link:nth-child(1) {
+.nav-link:nth-child(1) {
     margin-right: 5px;
-  }
+}
 
-  .nav-link:nth-child(2) {
+.nav-link:nth-child(2) {
     margin-right: 9px;
-  }
+}
 
-  .nav-link-round:last-child {
+.nav-link-round:last-child {
     margin-right: 12px;
-  }
+}
 
-  .avatar {
+.avatar {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-  }
+}
 
+/* MAIN */
 
-  /* MAIN */
-
-  .main {
+.main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -109,15 +108,15 @@
     height: 55vh;
     min-height: 300px;
     margin-top: 50px;
-  }
+}
 
-  .google-logo {
+.google-logo {
     width: 344px;
     height: 110px;
     margin-bottom: 26px;
-  }
+}
 
-  .searchbar {
+.searchbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -129,60 +128,57 @@
     border-radius: 24px;
     box-shadow: none;
     margin: 5 auto;
-    /* background-color: transparent; */
-  }
+}
 
-  .searchbar:hover,
-  .searchbar:focus-within {
+.searchbar:hover,
+.searchbar:focus-within {
     border-color: white;
     box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
-    /* background-color: var(--border-color); */
-  }
+}
 
-  .search-icon {
+.search-icon {
     width: 20px;
     height: 20px;
     margin-right: 10px;
     margin-left: 5px;
-  }
+}
 
-  .search-input {
+.search-input {
     width: 100%;
     height: 100%;
     font-size: 16px;
-  }
+}
 
-  .search-buttons {
+.search-buttons {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 12px;
     margin-top: 30px;
-  }
+}
 
-  .button-search {
+.button-search {
     padding: 10px 20px;
-    /* border: 1px solid var(--border-color); */
     border-radius: 4px;
     background-color: var(--button-search-background);
     color: var(--button-search-font);
     font-size: 14px;
     margin-bottom: 5px;
-  }
+}
 
-  .button-search:hover {
+.button-search:hover {
     border-color: #dadce0;
     box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
     border: 1px solid var(--border-color);
-  }
+}
 
-  .button-search:focus {
+.button-search:focus {
     border-color: blue;
-  }
+}
 
-  /* FOOTER */
+/* FOOTER */
 
-  .footer {
+.footer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -195,60 +191,60 @@
     background: var(--footer-background);
     color: var(--footer-font);
     font-size: 14px;
-  }
+}
 
-  .left-section,
-  .right-section {
+.left-section,
+.right-section {
     display: flex;
-  }
+}
 
-  .right-section {
+.right-section {
     margin-right: 30px;
-  }
+}
 
-  .footer-link {
+.footer-link {
     display: block;
     padding: 10px 0 10px 30px;
-  }
+}
 
-  .footer-link:hover {
+.footer-link:hover {
     text-decoration: underline;
-  }
+}
 
-  /* Media queries */
+/* Media queries */
 
-  @media (max-width: 660px) {
-
+@media (max-width: 660px) {
     .google-logo {
         width: auto;
         height: auto;
     }
 
     .searchbar {
-      width: 80%;
+        width: 80%;
+        border: 0.5px solid #5f6368;
     }
 
     .footer {
-      flex-direction: column;
+        flex-direction: column;
     }
 
     .footer-link {
-      padding: 8px;
+        padding: 8px;
     }
 
     .right-section {
-      margin-right: 0;
+        margin-right: 0;
     }
-  }
+}
 
 @media (prefers-color-scheme: dark) {
     body {
-      color: #eee;
-      background: #202124;
+        color: #eee;
+        background: #202124;
     }
 
     a {
-      color: #809fff;
+        color: #809fff;
     }
 
     input {
@@ -261,21 +257,25 @@
         background-color: #303134;
     }
 
+    .searchbar {
+        border: 0.5px solid #5f6368;
+    }
+
     .searchbar:hover {
         color: #e8eaed;
         background-color: #303134;
         border: 1px solid #202124;
-        box-shadow: 0px 2px 5px 5px rgba(0,0,0,0.10);
-        -webkit-box-shadow: 0px 2px 5px 5px rgba(0,0,0,0.10);
-        -moz-box-shadow: 0px 2px 5px 5px rgba(0,0,0,0.10);
+        box-shadow: 0px 2px 5px 5px rgba(0, 0, 0, 0.1);
+        -webkit-box-shadow: 0px 2px 5px 5px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0px 2px 5px 5px rgba(0, 0, 0, 0.1);
     }
 
     .searchbar:hover,
     .searchbar:focus-within {
         border-color: #313131;
-        box-shadow: 0px 2px 5px 5px rgba(0,0,0,0.10);
-        -webkit-box-shadow: 0px 2px 5px 5px rgba(0,0,0,0.10);
-        -moz-box-shadow: 0px 2px 5px 5px rgba(0,0,0,0.10);
+        box-shadow: 0px 2px 5px 5px rgba(0, 0, 0, 0.1);
+        -webkit-box-shadow: 0px 2px 5px 5px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0px 2px 5px 5px rgba(0, 0, 0, 0.1);
     }
 
     .searchbar:hover .search-input {
@@ -283,9 +283,9 @@
         background-color: #303134;
     }
 
-  .button-search:focus {
-    border-color: var(--border-color);
-  }
+    .button-search:focus {
+        border-color: var(--border-color);
+    }
 
     .nav-link {
         color: #e8eaed;
@@ -299,8 +299,8 @@
         background: #171717;
         color: var(--footer-font-dark);
         border: 1px solid #202124;
-      }
-      .footer-link {
-          color: var(--footer-font-dark);
-      }
-  }
+    }
+    .footer-link {
+        color: var(--footer-font-dark);
+    }
+}
